fixed image attachment alignment bug.

--- a/public/css/widget_master/new_form.css
+++ b/public/css/widget_master/new_form.css
@@ -169,6 +169,8 @@ a:hover{
 	margin:0px;
 	font-family:Arial, Helvetica, sans-serif;
 	line-height:22px;
+	max-width: 357px;
+	max-height: 270px;
 }
 
 .form-green-thumbs{
